# GNC6

./: .env  .gitignore  000outlines.md  CMakeLists.txt  CMakePresets.json  README.md  environment.yml
config/: core.json  core.yaml  dynamics.json  effectors.json  environment.json  logic.json  logic.yaml  param_sets.csv  sensors.json  utility.json  utility.yaml
doc/: factory_and_config_plan.md  开发计划.md
docs/: config_usage.md  coordinates.md  coordination_optimization_summary.md  coordination_system_design.md  coordination_usage_guide.md  flow_controller_guide.md  logger_usage.md  yaml_config_guide.md
examples/: config_example.cpp  coordination_usage_example.cpp  logger_example.cpp  simplified_math_test.cpp  transform_example.cpp  yaml_config_example.cpp
include/gnc/common/: exceptions.hpp  types.hpp
include/gnc/components/custom/: coordination_initializer.hpp
include/gnc/components/dynamics/: rigid_body_dynamics_6dof.hpp
include/gnc/components/effectors/: simple_aerodynamics.hpp
include/gnc/components/environment/: simple_atmosphere.hpp
include/gnc/components/logic/: control_logic.hpp  guidance_logic.hpp  navigation_logic.hpp  phased_guidance_logic.hpp  simple_guidance_with_transform.hpp
include/gnc/components/sensors/: ideal_imu_sensor.hpp
include/gnc/components/utility/: bias_adapter.hpp  config_manager.hpp  csv_writer.hpp  data_logger.hpp  disturbance.hpp  hdf5_writer.hpp  simple_coordination_initializer.hpp  simple_logger.hpp
include/gnc/components/utility/flow_control/: flight_phase_manager.hpp  flight_phase_manager_example.hpp  flow_controller.hpp  sustained_condition_example.hpp
include/gnc/coordination/: coordinate_system_registry.hpp  coordination.hpp  frame_identifier.hpp  itransform_provider.hpp  simple_coordination.hpp
include/gnc/core/: component_base.hpp  component_factory.hpp  component_registrar.hpp  simulator.hpp  state_interface.hpp  state_manager.hpp  timing_manager.hpp
include/math/: math.hpp
include/math/tensor/: tensor.hpp
include/math/transform/: README.md  transform.hpp  types.hpp
logs/: simulation_data.csv
src/: CMakeLists.txt  main.cpp
src/components/utility/: config_manager.cpp  csv_writer.cpp  data_logger.cpp  disturbance.cpp  hdf5_writer.cpp  simple_logger.cpp
src/core/: simulator.cpp
src/gnc/components/logic/: control_logic.hpp
src/gnc/core/: state_access.hpp  state_manager.hpp
tests/: CMakeLists.txt  main.cpp  test_config_manager.cpp  test_hdf5_writer.cpp  test_transform.cpp
